objects/Occurrence__c.object
<CustomObject>
    <description>Defines a repeatable date</description>
    <fields>
        <fullName>Cleanup_Marker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field becomes checked if fields are changed on this record that would cause incorrect work to be scheduled.</description>
        <inlineHelpText>Read Only field marking if the cleanup batch will pick up this record</inlineHelpText>
        <label>Cleanup Marker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Generation__c</fullName>
        <description>Old field with not up to date information</description>
        <inlineHelpText>Do not use this field</inlineHelpText>
        <label>Date of Last Generation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <description>When Every is 1, select what day of the week for the occurrence</description>
        <label>Day of the Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>day</fullName>
                </value>
                <value>
                    <fullName>weekday</fullName>
                </value>
                <value>
                    <fullName>weekend day</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>End time of the occurrence</description>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Every__c</fullName>
        <description>Space between the frequency. Every # frequency.</description>
        <label>Every</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farthest_Date_Generated__c</fullName>
        <description>This field marks the date of the work order/service appointment that is scheduled the farthest into the future.</description>
        <inlineHelpText>The farthest date in the future that work is scheduled for.</inlineHelpText>
        <label>Farthest Date Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency that the event occurs</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this Occurrence is still active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modified_Since_Last_Batch__c</fullName>
        <formula>OR(LastModifiedDate &gt;  Most_Recent_Batch__c,
 Timeline__r.LastModifiedDate &gt; Most_Recent_Batch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified Since Last Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Batch__c</fullName>
        <label>Most Recent Batch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Start time of the occurrence</description>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>TestName__c</fullName>
        <label>TestName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The revolving appointment that this occurrence appears on</description>
        <label>Revolving Appointment</label>
        <referenceTo>Timeline__c</referenceTo>
        <relationshipLabel>Occurrences</relationshipLabel>
        <relationshipName>Occurrences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if this Occurrence has been modified and its generated records have not been handled</description>
        <label>Was Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <label>Week Number</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Frequency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>first</fullName>
                </value>
                <value>
                    <fullName>second</fullName>
                </value>
                <value>
                    <fullName>third</fullName>
                </value>
                <value>
                    <fullName>fourth</fullName>
                </value>
                <value>
                    <fullName>fifth</fullName>
                </value>
                <value>
                    <fullName>last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Occurrence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Timeline__c</columns>
        <columns>Cleanup_Marker__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_of_Last_Generation__c</columns>
        <columns>Day__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Weekly</value>
        </filters>
        <filters>
            <field>Day__c</field>
            <operation>equals</operation>
            <value>Monday</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Occurence</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All Active Occurence</label>
    </listViews>
    <nameField>
        <displayFormat>OC-{0000000}</displayFormat>
        <label>Occurrence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Occurrences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_Select_Day_if_not_Daily</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;System Administrator&apos;, ISNULL(Day__c), TEXT(Frequency__c)!= &apos;Daily&apos;)</errorConditionFormula>
        <errorMessage>If your frequency is set to weekly or monthly please specify the days for it to repeat on.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_Less_Than_End_Time</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Time__c &gt;  End_Time__c</errorConditionFormula>
        <errorMessage>You can not have a start time later than your end time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>You_can_not_modify_the_frequency</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Frequency__c)</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>You can not modify the frequency of an occurrence.</errorMessage>
    </validationRules>
</CustomObject>